contact page styling, form style tweaks

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -696,3 +696,20 @@ $contact-page-address-section-color = $navy
 $contact-page-address-section-font = $sans-serif
 $contact-page-address-section-transform = normal
 
+$contact-page-info-request-section-background = $dark-blue
+$contact-page-info-request-section-color = $white
+$contact-page-info-request-section-h1-font = $sans-serif-headline
+$contact-page-info-request-section-h1-size-mobile = rem(21px)
+$contact-page-info-request-section-h1-size-desktop = rem(24px)
+$contact-page-info-request-section-description-size-mobile = rem(18px)
+$contact-page-info-request-section-description-size-desktop = rem(18px)
+
+
+$contact-page-form-section-background = $background-gray
+$contact-page-form-section-h1-size-mobile = rem(24px)
+$contact-page-form-section-h1-size-desktop = rem(32px)
+$contact-page-form-section-description-size-mobile = rem(18px)
+$contact-page-form-section-description-size-desktop = rem(18px)
+$contact-page-form-section-form-labels-size-mobile = rem(18px)
+$contact-page-form-section-form-labels-size-mobile = rem(18px)
+
