--- a/src/styles/mixins/_misc.styl
+++ b/src/styles/mixins/_misc.styl
@@ -63,7 +63,7 @@ form-control-focus(color=$input-border-focus)
   &:focus
     border-color color
     outline 0
-    box-shadow unquote("0 0 8px " + color-rgba + "")
+    // box-shadow unquote("0 0 8px " + color-rgba + "")
 
 
 
