add textarea placeholder

--- a/templates/singles/contact/index.twig
+++ b/templates/singles/contact/index.twig
@@ -213,7 +213,7 @@
         </div>
         <div>
           <label for="message">Message</label>
-          <textarea id="message" cols="30" rows="5"></textarea>
+          <textarea id="message" cols="30" rows="5" placeholder="Begin message..."></textarea>
         </div>
         <div class="center">
           <input type="submit" id="submit" value="Submit">
