added input mask for phone

--- a/templates/singles/contact/index.twig
+++ b/templates/singles/contact/index.twig
@@ -183,11 +183,11 @@
         <div class="form-group">
           <div class="form-input">
             <label for="email">Email</label>
-            <input type="text" id="email" placeholder="Email">
+            <input type="email" id="email" placeholder="Email">
           </div>
           <div class="form-input">
             <label for="phone">Phone</label>
-            <input type="tel" id="phone" placeholder="Phone">
+            <input id="phone" type="tel" name="phone" placeholder="Phone">
           </div>
         </div>
         <div>
