fix directory landing url

--- a/templates/singles/contact/index.twig
+++ b/templates/singles/contact/index.twig
@@ -146,7 +146,7 @@
     </div>
     {% endif %}
 
-    <a href="craft.entries.section('directoryLanding').one().url" title="Staff Directory">Staff Directory</a>
+    <a href="{{ craft.entries.section('directoryLanding').one().url }}" title="Staff Directory">Staff Directory</a>
 
   </div>
 
