--- a/templates/structure/minutes-agendas/index.twig
+++ b/templates/structure/minutes-agendas/index.twig
@@ -8,7 +8,7 @@
 {% block listContent %}
 
 {% set entryIds = craft.entries.section('minutesAgendas').ids() %}
-{% set boards = craft.entries.relatedTo({ sourceElement: entryIds }).find() %}
+{% set boards = craft.entries.relatedTo({ sourceElement: entryIds }).all() %}
 
 {% for board in boards %}
   <li><span>{{ board.title }}</span> <a href="{{ (craft.app.request.segments|last) ~ '/' ~ board.slug }}" title="View all Minutes &amp; Agendas for {{ board.title }}">View</a></li>
