started staff directory, mobile view mostly done

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -713,3 +713,37 @@ $contact-page-form-section-description-size-desktop = rem(18px)
 $contact-page-form-section-form-labels-size-mobile = rem(18px)
 $contact-page-form-section-form-labels-size-mobile = rem(18px)
 
+
+// ------------------------------------------------------
+// ------ STAFF DIRECTORY
+
+$directory-department-title-color = $navy
+$directory-department-title-toggle-color = $light-blue
+$directory-department-title-size-mobile = rem(24px)
+$directory-department-title-size-desktop = rem(36px)
+$directory-department-title-controls-color = $light-blue
+$directory-department-title-controls-size-mobile = rem(14px)
+$directory-department-title-controls-size-desktop = rem(14px)
+$directory-department-title-controls-transform = uppercase
+
+$directory-department-description-size-mobile = rem(18px)
+$directory-department-description-size-desktop = rem(18px)
+$directory-department-description-color = $navy
+$directory-department-description-weight = $font-weight.normal
+$directory-department-description-transform = none
+
+$directory-block-shadow = $global-block-box-shadow
+$directory-block-shadow-hover = $global-block-box-shadow-hover
+$directory-block-image-size-mobile = rem(88.5px)
+$directory-block-image-size-desktop = "58%"
+$directory-block-name-color = $navy
+$directory-block-name-size-mobile = rem(21px)
+$directory-block-name-size-desktop = rem(36px)
+
+$directory-block-title-font = $serif
+$directory-block-title-style = italic
+$directory-block-title-color = $light-blue
+$directory-block-title-size-mobile = rem(12px)
+$directory-block-title-size-desktop = rem(18px)
+
+
