--- a/src/styles/site/_directory.styl
+++ b/src/styles/site/_directory.styl
@@ -33,6 +33,9 @@
   +above(m)
     animation none
 
+    & + section
+      margin-top rem(50px)
+
   &:nth-of-type(1)
     animation-delay: 0.5s
   &:nth-of-type(2)
@@ -70,7 +73,8 @@
     height rem(24px) + $directory-department-title-size-mobile + rem(18.5px)
     z-index 1
     opacity 0
-    +above(m)
+  +above(m)
+    & > input[type=checkbox]
       display none
       visibility hidden
       height 0
@@ -117,6 +121,7 @@
     +above(m)
       cursor default
       font-size $directory-department-title-size-desktop
+      padding rem(39.5px) 0
 
     > span.controls
       color $directory-department-title-controls-color
@@ -134,6 +139,10 @@
         display inline-block
         font-size $directory-department-title-controls-size-desktop
         margin 0
+        max-height initial
+        opacity 1
+        transform translate(0, 0)
+        overflow visible
 
       > span
         display inline-block
@@ -162,6 +171,8 @@
             left: 'calc(%s - %s)' % (25% 1px)
             width: 60%
             height: rem(2px)
+            +above(m)
+              left: 'calc(%s - %s)' % (25% rem(0.5px))
 
       > a
         display inline-block
@@ -174,6 +185,8 @@
           +above(m)
             display inline
             visibility visible
+            &:before
+              content '\00a0'
       > p
         color $directory-department-description-color
         font-size $directory-department-description-size-mobile = rem(18px)
@@ -195,6 +208,15 @@
     overflow hidden
     transform translate(0, 10%)
     z-index 2
+  +above(m)
+    h2 > span.controls
+    ul
+      max-height initial
+      opacity 1
+      transform translate(0, 0)
+      overflow visible
+
+
   ul
     list-style none
     padding 0 rem(30px)
@@ -204,10 +226,15 @@
       opacity: 1
       transform: translate(0, 0)
       margin-top: 14px
+      padding 0
+      lost-flex-container: row
 
     li
       padding 0
       margin 0 0 rem(9.5px) 0
+      +above(m)
+        lost-column 1/4 4
+        margin-bottom rem(30px)
 
       a
         box-shadow $directory-block-shadow
@@ -217,6 +244,13 @@
         position: relative
         text-align right
         text-decoration none
+        &:hover
+          box-shadow $directory-block-shadow-hover
+
+        +above(m)
+          height 100%
+          padding rem(60px) rem(10px) rem(57.5px)
+          text-align center
 
         figure
           margin 0
@@ -225,6 +259,17 @@
           top 0
           height $directory-block-image-size-mobile
           width $directory-block-image-size-mobile
+          +above(m)
+            box-shadow $directory-block-shadow
+            // width 65%
+            width: 'calc(%s + %s)' % (65% rem(20px))
+            position: relative
+            margin: 0 auto rem(55.5px)
+            height: auto
+            line-height: 0
+            border 10px solid $white
+            &, img
+              border-radius 50%
 
         h3
           color $directory-block-name-color
