fix rupture error

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -23,7 +23,7 @@ rupture = {
 }
 // rupture.scale = 0 (rupture.mobile-cutoff) 600px 800px (rupture.desktop-cutoff) (rupture.hd-cutoff)
 rupture.scale = 0 (rupture.mobile-cutoff) 736px (rupture.tablet-cutoff) (rupture.desktop-cutoff) (rupture.hd-cutoff)
-rupture.scale-names = 'xs' 's' 'm' 'l' 'xl' 'hd'
+rupture.scale-names = 'xs' 'sm' 'm' 'l' 'xl' 'hd'
 
 mobile = (rupture.mobile-cutoff)
 tablet-min = 736px
